# BevyCraft-InitGames

./: .gitignore  Cargo.toml  build.sh  install.sh  package-lock.json  package.json  run-dev.sh  tsconfig.json
out_old/: index.html
src/: lib.rs  main.rs  models.rs
src-ts/: main.ts
src/interaction/: camera_controller.rs  keyboard.rs  mod.rs  mouse.rs  picking.rs
src/scene/: camera.rs  gui.rs  light.rs  mod.rs  plane.rs  props.rs
src/web/: mod.rs
